--- a/JS.UnityManager/MainForm.resx
+++ b/JS.UnityManager/MainForm.resx
@@ -287,4 +287,7 @@
         AAA=
 </value>
   </data>
+  <metadata name="metroStyleManager.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>123, 17</value>
+  </metadata>
 </root>
